# matter_webcontrol

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  RESTRUCTURE_PLAN.md  pyproject.toml
.github/workflows/: python-publish.yml  test.yml
cli/: __init__.py  auth.py  constants.py  conversions.py  core.py  logic_bridge.py  logicalbridge.py  matter_bridge.py  mcp_server.py  paths.py  schemas.py  serializers.py  server.py
dev/: fake_server.py  smoke.sh  start_two.sh  stop.sh
tests/: conftest.py  fakes.py  test_api.py  test_concurrency.py  test_controller.py  test_conversions.py  test_facade.py  test_logical_sse.py  test_persistence.py  test_security.py  test_serializers.py  test_status.py
