[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "matter-web-controller"
version = "0.28.0"
description = "Control Matter smart-home devices and federate remote instances over a REST + MCP API."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn>=0.27,<1",
    "pydantic>=2,<3",
    "aiohttp>=3.9,<4",
    "home-assistant-chip-core",
    "home-assistant-chip-clusters",
    "cryptography",
    "python-matter-server>=7,<9",
    "zeroconf",
    "mcp[cli]>=1,<2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "anyio",
    "ruff",
    "black",
    "isort",
    "mypy",
]

[project.scripts]
matter-srv = "cli.server:main"
matter-mcp = "cli.mcp_server:main"

[tool.setuptools.packages.find]
include = ["cli*"]
exclude = ["dev*", "matter_storage*"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true   # chip / matter_server / mcp ship no stubs
check_untyped_defs = true
warn_redundant_casts = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
